# build-watcher

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-watcher.desktop  install.sh  rustfmt.toml  uninstall.sh
.github/workflows/: release.yml  rust.yml
docs/: architecture.md  features.md  ideas.md  plan-build-history.md  tui.md
src/: config.rs  dirs.rs  events.rs  format.rs  github.rs  history.rs  lib.rs  main.rs  notification.rs  persistence.rs  rate_limiter.rs  register.rs  server.rs  status.rs  watcher.rs
src/config/: mod.rs  resolve.rs  types.rs
src/platform/: mod.rs  null.rs  universal.rs
src/platform/linux/: build-watcher.service  dbus.rs  mod.rs  notify_send.rs
src/platform/macos/: apple_script.rs  com.build-watcher.plist  mod.rs  terminal_notifier.rs
src/platform/universal/: mod.rs
src/server/: actions.rs  mcp.rs  mod.rs  rest.rs  schema.rs
src/watcher/: mod.rs  poller.rs  repo_poller.rs  startup.rs  tests.rs  types.rs
