[package]
name = "build-watcher"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "time", "signal", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
futures = "0.3"
notify-rust = "4"
