[package]
name = "build-watcher"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
name = "build_watcher"
path = "src/lib.rs"

[[bin]]
name = "build-watcher"
path = "src/main.rs"

[[bin]]
name = "bw"
path = "src/bin/bw.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "time", "signal", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
chrono = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"
