[package]
name = "build-watcher"
version = "0.8.1"
edition = "2024"
license = "MIT"

[features]
default = ["daemon", "tui"]
daemon = ["dep:rmcp", "dep:axum", "dep:libc", "tokio/net", "tokio/signal"]
tui = ["dep:ratatui", "dep:crossterm", "dep:reqwest", "dep:semver"]

[lib]
name = "build_watcher"
path = "src/lib.rs"

[[bin]]
name = "build-watcher"
path = "src/bin/build-watcher/main.rs"
required-features = ["daemon"]

[[bin]]
name = "bw"
path = "src/bin/bw/main.rs"
required-features = ["tui"]

[dependencies]
# Shared
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
regex = "1"

# Daemon-only
rmcp = { version = "1", features = ["server", "transport-streamable-http-server", "macros"], optional = true }
axum = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }

# TUI-only
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"], optional = true }
semver = { version = "1", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"
